# multi-agent-facility-manager

./: .env  .gitignore  CHANGELOG.md  CONTEXT.md  README.md  agent.md  architecture.md  assessment_report.md  enhancement-guide.md  main.py  mission.md  pyproject.toml  run_app.py  run_demo.py  timeline.md
.github/workflows/: demo-ready.yml  pr-validation.yml
dev-tools/: README.md  agent_dashboard.py  agent_monitor.py  demo_fallback.py  demo_showcase.py  fix_agents.py  fix_crewai_integration.py  integrated_demo.py  manual_agent_test.py  prepare_demo.py  quick_test.py  setup_crewai_environment.py  simple_agent_test.py  test_client.py  test_crewai_integration.py  test_ollama.py  test_optimized_crew.py  test_websocket.py  visual_dashboard.py
dev-tools/responses/: cooling_crisis.json  energy_optimization.json  routine_maintenance.json  security_breach.json
docs/: ARCHITECTURE.md  README.md  demo_script.md  troubleshooting.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: AgentStatus.css  AgentStatus.tsx  ConnectionStatus.css  ConnectionStatus.tsx  EventLog.css  EventLog.tsx  FacilityLayout.css  FacilityLayout.tsx  PerformancePanel.css  PerformancePanel.tsx
frontend/src/components/__tests__/: AgentStatus.test.tsx  ConnectionStatus.test.tsx  FacilityLayout.test.tsx  PerformancePanel.test.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/hooks/__tests__/: useWebSocket.test.ts
frontend/src/test/: setup.ts
scripts/: ci-setup.sh  run-demo-tests.sh
scripts/monitoring/: memory_monitor.py
src/intellicenter/api/: websocket.py
src/intellicenter/config/: agents.yaml  optimized_agents.yaml  optimized_tasks.yaml  tasks.yaml
src/intellicenter/infrastructure/: crew.py  memory.py  recovery.py
src/intellicenter/infrastructure/llm/: factory.py
src/intellicenter/orchestrator/: coordinator.py
src/intellicenter/scenarios/: __init__.py  cooling_crisis.py  energy_optimization.py  routine_maintenance.py  scenario_orchestrator.py  security_breach.py
src/intellicenter/shared/: __init__.py  event_bus.py  exceptions.py  logger.py  retries.py  schema.py  state.py
src/intellicenter/simulation/: facility_simulator.py
src/intellicenter/workers/: fallback.py
src/intellicenter/workers/hvac/: agent.py
src/intellicenter/workers/network/: agent.py
src/intellicenter/workers/power/: agent.py
src/intellicenter/workers/security/: agent.py
tests/manual/: smoke_test_cooling.py
